[gd_scene load_steps=8 format=3 uid="uid://dhq3n2qg2150b"]

[ext_resource type="PackedScene" uid="uid://c7qynj1hx3g86" path="res://core/hub.tscn" id="1"]
[ext_resource type="TileSet" uid="uid://bnict46ngcgau" path="res://assets/tile_sets/ruin_tileset.tres" id="2"]
[ext_resource type="Script" path="res://core/managers/level_manager.gd" id="3"]

[sub_resource type="RectangleShape2D" id="1"]

[sub_resource type="RectangleShape2D" id="2"]

[sub_resource type="RectangleShape2D" id="3"]

[sub_resource type="RectangleShape2D" id="4"]

[node name="LevelManager" type="Node2D"]
script = ExtResource("3")
tile_size = 128
barrier_width = 10

[node name="CurrentMap" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = ExtResource("2")
cell_quadrant_size = 128
format = 2

[node name="Hub" parent="." instance=ExtResource("1")]

[node name="LevelEdgeBarrier" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="BarrierTop" type="CollisionShape2D" parent="LevelEdgeBarrier"]
shape = SubResource("1")

[node name="BarrierBottom" type="CollisionShape2D" parent="LevelEdgeBarrier"]
shape = SubResource("2")

[node name="BarrierRight" type="CollisionShape2D" parent="LevelEdgeBarrier"]
shape = SubResource("3")

[node name="BarrierLeft" type="CollisionShape2D" parent="LevelEdgeBarrier"]
shape = SubResource("4")

[node name="EnemySpawnClock" type="Timer" parent="."]
